--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:              Craftstoff
 email:              your-email@example.com
 description:        registered brand for licensing
 author:             Start Bootstrap
-baseurl:            ""
+baseurl:            "craftstoff"
 
 
 
