--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:              Craftstoff
-email:              your-email@example.com
+email:              marke@craftstoff.com
 description:        registered brand for licensing
 author:             Start Bootstrap
 baseurl:            "craftstoff"
