--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:              Craftstoff
 email:              marke@craftstoff.com
 description:        registered brand for licensing
 author:             Start Bootstrap
-baseurl:            "craftstoff"
+baseurl:            ""
 
 
 
